--- a/index.html
+++ b/index.html
@@ -154,21 +154,21 @@
         <div class="container">
             <h2 class="section-title">How Selenix Works</h2>
             <div class="steps">
-                <div class="step fade-in-element">
+                <div class="step fade-in-element active">
                     <div class="step-number">1</div>
                     <div class="step-content">
                         <h3>Install the Extension</h3>
                         <p>Add Selenix to your Chrome browser with just a single click. No complex setup required.</p>
                     </div>
                 </div>
-                <div class="step fade-in-element">
+                <div class="step fade-in-element active">
                     <div class="step-number">2</div>
                     <div class="step-content">
                         <h3>Record Your Workflow</h3>
                         <p>Simply navigate websites and perform actions as you normally would. Selenix records every click, form fill, and page visit.</p>
                     </div>
                 </div>
-                <div class="step fade-in-element">
+                <div class="step fade-in-element active">
                     <div class="step-number">3</div>
                     <div class="step-content">
                         <h3>Run Automatically</h3>
