templates and added dropdown

--- a/index.html
+++ b/index.html
@@ -22,15 +22,25 @@
                     <span class="logo-text">selenix<span class="logo-dot">.</span>io</span>
                 </a>
                 <div class="nav-links">
-                    <a href="#docs">Docs</a>
-                    <a href="#product">Product</a>
+                    <a href="/docs">Docs</a>
+                    <div class="dropdown">
+                        <a href="#" class="dropdown-toggle">Product <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-menu">
+                            <a href="/product/no-code-builder">No-code builder</a>
+                            <a href="/product/no-code-steps">No-code steps</a>
+                            <a href="/product/bot-runner">Bot runner</a>
+                            <a href="/product/templates">Templates</a>
+                            <a href="/product/video-guides">Video guides</a>
+                            <a href="/product/release-notes">Release notes</a>
+                        </div>
+                    </div>
                     <a href="#pricing">Pricing</a>
                     <a href="#support">Support</a>
                     <a href="#blog">Blog</a>
                 </div>
                 <a href="#download" class="cta-button">
                     <i class="fa-solid fa-download"></i>
-                    Install Chrome Extension
+                    Download Selenix
                 </a>
                 <div class="mobile-menu-button">
                     <i class="fa-solid fa-bars"></i>
@@ -43,11 +53,11 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="reveal-text">Browser Automation.<br>Quickly, without code</h1>
-                <p class="reveal-text">Save time - use browser bots to automate website actions and repetitive tasks on any website or web app.</p>
+                <p class="reveal-text">Save time - use Selenix to automate website actions and repetitive tasks on any website or web app. Works on Windows, Mac, and Linux.</p>
                 <div class="reveal-text">
                     <a href="#download" class="primary-button">
                         <i class="fa-solid fa-download"></i>
-                        Download the chrome extension
+                        Download Selenix
                     </a>
                 </div>
                 <p class="free-trial-text reveal-text">
