--- a/product/templates.html
+++ b/product/templates.html
@@ -24,16 +24,16 @@
                     <span class="logo-text">selenix<span class="logo-dot">.</span>io</span>
                 </a>
                 <div class="nav-links">
-                    <a href="/docs">Docs</a>
+                    <a href="../docs/index.html">Docs</a>
                     <div class="dropdown">
                         <a href="#" class="dropdown-toggle active">Product <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-menu">
-                            <a href="/product/no-code-builder">No-code builder</a>
-                            <a href="/product/no-code-steps">No-code steps</a>
-                            <a href="/product/bot-runner">Bot runner</a>
-                            <a href="/product/templates" class="active">Templates</a>
-                            <a href="/product/video-guides">Video guides</a>
-                            <a href="/product/release-notes">Release notes</a>
+                            <a href="no-code-builder.html">No-code builder</a>
+                            <a href="no-code-steps.html">No-code steps</a>
+                            <a href="bot-runner.html">Bot runner</a>
+                            <a href="templates.html" class="active">Templates</a>
+                            <a href="video-guides.html">Video guides</a>
+                            <a href="release-notes.html">Release notes</a>
                         </div>
                     </div>
                     <a href="#pricing">Pricing</a>
@@ -61,7 +61,7 @@
                         <i class="fa-solid fa-download"></i>
                         Browse Templates
                     </a>
-                    <a href="/docs/templates" class="secondary-outline-button">
+                    <a href="../docs/templates.html" class="secondary-outline-button">
                         <i class="fa-solid fa-book"></i>
                         Learn How to Use Templates
                     </a>
@@ -495,7 +495,7 @@
                         <li><i class="fa-solid fa-check"></i> Help others automate their tasks</li>
                         <li><i class="fa-solid fa-check"></i> Showcase your automation skills</li>
                     </ul>
-                    <a href="/docs/create-templates" class="primary-button">
+                    <a href="../docs/create-templates.html" class="primary-button">
                         <i class="fa-solid fa-upload"></i>
                         Learn How to Create Templates
                     </a>
