--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selenix.io - Modern Browser Automation</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="components/components.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Fonts -->
@@ -15,39 +16,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav>
-                <a href="/" class="logo">
-                    <span class="logo-text">selenix<span class="logo-dot">.</span>io</span>
-                </a>
-                <div class="nav-links">
-                    <a href="/docs">Docs</a>
-                    <div class="dropdown">
-                        <a href="#" class="dropdown-toggle">Product <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-menu">
-                            <a href="product/no-code-builder.html">No-code builder</a>
-                            <a href="product/no-code-steps.html">No-code steps</a>
-                            <a href="product/bot-runner.html">Bot runner</a>
-                            <a href="product/templates.html">Templates</a>
-                            <a href="product/video-guides.html">Video guides</a>
-                            <a href="product/release-notes.html">Release notes</a>
-                        </div>
-                    </div>
-                    <a href="#pricing">Pricing</a>
-                    <a href="#support">Support</a>
-                    <a href="#blog">Blog</a>
-                </div>
-                <a href="#download" class="cta-button">
-                    <i class="fa-solid fa-download"></i>
-                    Download Selenix
-                </a>
-                <div class="mobile-menu-button">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-            </nav>
-        </div>
-    </header>
+    <!-- Navbar Component will be loaded here -->
+    <div id="navbar-container"></div>
 
     <section class="hero">
         <div class="container">
@@ -240,53 +210,12 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h3>selenix.io</h3>
-                    <p class="footer-description">Modern browser automation tool that helps you save time and increase productivity without writing a single line of code.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-discord"></i></a>
-                    </div>
-                </div>
-                <div class="footer-column">
-                    <h3>Product</h3>
-                    <ul>
-                        <li><a href="#"><i class="fa-solid fa-file-lines"></i> Documentation</a></li>
-                        <li><a href="#"><i class="fa-solid fa-cubes"></i> No-code builder</a></li>
-                        <li><a href="#"><i class="fa-solid fa-list-check"></i> No-code steps</a></li>
-                        <li><a href="#"><i class="fa-solid fa-tag"></i> Pricing</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Web automation</h3>
-                    <ul>
-                        <li><a href="#"><i class="fa-solid fa-robot"></i> Automate website actions</a></li>
-                        <li><a href="#"><i class="fa-solid fa-keyboard"></i> Automate Data Entry</a></li>
-                        <li><a href="#"><i class="fa-solid fa-pen-to-square"></i> Automate Form Filling</a></li>
-                        <li><a href="#"><i class="fa-solid fa-puzzle-piece"></i> Browser extension</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Blog</h3>
-                    <ul>
-                        <li><a href="#"><i class="fa-solid fa-bug"></i> Debugging automations</a></li>
-                        <li><a href="#"><i class="fa-solid fa-plug"></i> Integration guides</a></li>
-                        <li><a href="#"><i class="fa-solid fa-brain"></i> ChatGPT web scraping</a></li>
-                        <li><a href="#"><i class="fa-solid fa-lightbulb"></i> Browser automation tips</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; 2025 selenix.io. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Component will be loaded here -->
+    <div id="footer-container"></div>
 
     <script src="script.js"></script>
+    <script src="components/components.js"></script>
+    <script src="components/navbar/navbar.js"></script>
+    <script src="components/footer/footer.js"></script>
 </body>
 </html>
