--- a/product/templates.html
+++ b/product/templates.html
@@ -30,7 +30,7 @@
                         <i class="fa-solid fa-download"></i>
                         Browse Templates
                     </a>
-                    <a href="../docs/templates.html" class="secondary-outline-button">
+                    <a href="../docs/index.html#templates" class="secondary-outline-button">
                         <i class="fa-solid fa-book"></i>
                         Learn How to Use Templates
                     </a>
@@ -464,7 +464,7 @@
                         <li><i class="fa-solid fa-check"></i> Help others automate their tasks</li>
                         <li><i class="fa-solid fa-check"></i> Showcase your automation skills</li>
                     </ul>
-                    <a href="../docs/create-templates.html" class="primary-button">
+                    <a href="../docs/index.html#create-templates" class="primary-button">
                         <i class="fa-solid fa-upload"></i>
                         Learn How to Create Templates
                     </a>
@@ -486,7 +486,7 @@
                         <i class="fa-solid fa-download"></i>
                         Download Selenix
                     </a>
-                    <a href="/docs" class="secondary-outline-button">
+                    <a href="../docs/index.html" class="secondary-outline-button">
                         <i class="fa-solid fa-book"></i>
                         Read Documentation
                     </a>
