--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <a href="#support" id="nav-support">Support</a>
                         <a href="#blog" id="nav-blog">Blog</a>
                     </div>
-                    <a href="#download" class="cta-button">
+                    <a href="license-generator.php?action=download" class="cta-button" download>
                         <i class="fa-solid fa-download"></i>
-                        Download Selenix
+                        Download Selenix + License
                     </a>
                     <div class="mobile-menu-button">
                         <i class="fa-solid fa-bars"></i>
@@ -89,14 +89,14 @@
                 <h1 class="reveal-text">Browser Automation.<br>Quickly, without code</h1>
                 <p class="reveal-text">Save time - use Selenix to automate website actions and repetitive tasks on any website or web app. Works on Windows, Mac, and Linux.</p>
                 <div class="reveal-text">
-                    <a href="#download" class="primary-button">
+                    <a href="license-generator.php?action=download" class="primary-button" download>
                         <i class="fa-solid fa-download"></i>
-                        Download Selenix
+                        Download Selenix + License
                     </a>
                 </div>
                 <p class="free-trial-text reveal-text">
-                    <i class="fa-regular fa-clock"></i>
-                    Get started for FREE, with 2 hours runtime!
+                    <i class="fa-solid fa-shield-alt"></i>
+                    Includes 1-year license key automatically!
                 </p>
             </div>
             <div class="hero-image reveal-text">
@@ -265,11 +265,15 @@
         <div class="container">
             <div class="cta-content fade-in-element">
                 <h2>Automate with selenix.io in minutes</h2>
-                <p>No credit card required • Two hours of free runtime</p>
-                <a href="#" class="secondary-button">
-                    <i class="fa-solid fa-rocket"></i>
-                    Get started for free
+                <p>No credit card required • One year free license • Download includes license key</p>
+                <a href="license-generator.php?action=download" class="secondary-button" download>
+                    <i class="fa-solid fa-download"></i>
+                    Download Selenix + License
                 </a>
+                <p class="license-info" style="margin-top: 15px; font-size: 14px; color: #666;">
+                    <i class="fa-solid fa-shield-alt"></i>
+                    Your download includes a secure 1-year license key
+                </p>
             </div>
         </div>
     </section>
