--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a href="#support" id="nav-support">Support</a>
                         <a href="#blog" id="nav-blog">Blog</a>
                     </div>
-                    <a href="license-generator.php?action=download" class="cta-button" download>
+                    <a href="download.php" class="cta-button">
                         <i class="fa-solid fa-download"></i>
                         Download Selenix + License
                     </a>
@@ -89,7 +89,7 @@
                 <h1 class="reveal-text">Browser Automation.<br>Quickly, without code</h1>
                 <p class="reveal-text">Save time - use Selenix to automate website actions and repetitive tasks on any website or web app. Works on Windows, Mac, and Linux.</p>
                 <div class="reveal-text">
-                    <a href="license-generator.php?action=download" class="primary-button" download>
+                    <a href="download.php" class="primary-button">
                         <i class="fa-solid fa-download"></i>
                         Download Selenix + License
                     </a>
@@ -265,8 +265,8 @@
         <div class="container">
             <div class="cta-content fade-in-element">
                 <h2>Automate with selenix.io in minutes</h2>
-                <p>No credit card required • One year free license • Download includes license key</p>
-                <a href="license-generator.php?action=download" class="secondary-button" download>
+                <p>No credit card required • One year free license • Email registration required</p>
+                <a href="download.php" class="secondary-button">
                     <i class="fa-solid fa-download"></i>
                     Download Selenix + License
                 </a>
