index changes, manual

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                 </div>
                 <div class="feature-item">
                     <i class="fa-solid fa-plug feature-icon"></i>
-                    <span>Connect to Zapier, Integromat or Webhooks</span>
+                    <span>Connect to Zapier, Integromat, Make, N8N or any Webhooks</span>
                 </div>
                 <div class="feature-item">
                     <i class="fa-solid fa-brain feature-icon"></i>
-                    <span>Connect to ChatGPT for AI Automation</span>
+                    <span>Connect to Openrouter Models for AI Automation and AI Content Generation</span>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
 
     <section class="use-cases">
         <div class="container">
-            <h2 class="section-title">Most browser workflows can be automated.<br>So we've built Selenix to help us work smarter.</h2>
+            <h2 class="section-title">Most browser tasks can be automated.<br>So we've built Selenix to help us work smarter.</h2>
             <p class="section-subtitle">Scenarios and use cases where Selenix excels:</p>
 
             <div class="use-case fade-in-element">
@@ -125,8 +125,8 @@
                     <p class="use-case-quote">"Saved 63 hours of manual work in the first month alone"</p>
                 </div>
                 <div class="testimonial">
-                    <p>"This browser automation software is amazing!!! I set out to find a quick way to grab some information off of a website for my business. After I started using it, I found out just how powerful it can be.</p>
-                    <p>It is so customizable that it can really be used to do anything a human can do when looking up website information, and it can store all of the information automatically in Google sheets for further processing. It can even deploy ChatGPT to parse through scraped data.</p>
+                    <p>"This browser automation software is amazing!!! I set out to find a quick way to grab some information off of ADSY.com for my business. After I started using it, I found out just how powerful it can be.</p>
+                    <p>It is so customizable that it can really be used to do anything a human can do when looking up website information, I was able to quickly scrape pricing information and export it to CSV for further processing. It can even deploy ChatGPT to parse through scraped data.</p>
                     <p>Over the course of my first month using Selenix.io, my automations have personally saved me over <span class="counter" data-target="3800">0</span> minutes (~63hrs) of browsing and collecting information, and a lot more than that if you take into consideration how efficiently it works with no distractions. It's like I hired a part time assistant for a fraction of the cost. Well done Selenix!"</p>
                     <div class="testimonial-author">
                         <img src="https://via.placeholder.com/50" alt="Alex Chen" class="author-avatar">
@@ -166,15 +166,16 @@
                 <div class="step fade-in-element active">
                     <div class="step-number">1</div>
                     <div class="step-content">
-                        <h3>Install the Extension</h3>
-                        <p>Add Selenix to your Chrome browser with just a single click. No complex setup required.</p>
+                        <h3>Download the App</h3>
+                        <p>Download Selenix with just a single click. No complex setup required. Free.</p>
                     </div>
                 </div>
                 <div class="step fade-in-element active">
                     <div class="step-number">2</div>
                     <div class="step-content">
-                        <h3>Record Your Workflow</h3>
-                        <p>Simply navigate websites and perform actions as you normally would. Selenix records every click, form fill, and page visit.</p>
+                        <h3>Setup your Workflow (Either create your own, or download a pre-built template)</h3>
+                        <p>Browse our selection of pre-built templates for the most common automations. You can also create your own using our built in AI Assistant. No more 
+                            digging through comlex HTML for locators, the powerful AI assitant has access to the entire browser and work environment making everything easy.</p>
                     </div>
                 </div>
                 <div class="step fade-in-element active">
