ai gen docs pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selenix.io - Modern Browser Automation</title>
+    <title>Selenix.io - AI-Powered Browser Automation & Web Scraping</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="components/components.css">
     <!-- Font Awesome for icons -->
@@ -51,12 +51,12 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="reveal-text">Browser Automation.<br>Quickly, without code</h1>
-                <p class="reveal-text">Save time - use Selenix to automate website actions and repetitive tasks on any website or web app. Works on Windows, Mac, and Linux.</p>
+                <h1 class="reveal-text">AI-Powered Browser Automation.<br>Zero Code Required</h1>
+                <p class="reveal-text">Automate web scraping, data extraction, and repetitive browser tasks with intelligent AI assistance. Schedule automations, export data, and manage complex workflows—all without writing a single line of code.</p>
                 <div class="reveal-text">
                     <a href="download.php" class="primary-button">
                         <i class="fa-solid fa-download"></i>
-                        Download Selenix + License
+                        Download Selenix + Free License
                     </a>
                 </div>
                 <p class="free-trial-text reveal-text">
@@ -65,14 +65,14 @@
                 </p>
             </div>
             <div class="hero-image reveal-text">
-                <img src="https://via.placeholder.com/600x400" alt="Selenix Browser Automation">
+                <img src="https://via.placeholder.com/600x400" alt="Selenix AI Browser Automation">
                 <div class="floating-card card-1">
-                    <i class="fa-solid fa-robot"></i>
-                    <span>Automated Workflow</span>
+                    <i class="fa-solid fa-brain"></i>
+                    <span>AI Assistant</span>
                 </div>
                 <div class="floating-card card-2">
-                    <i class="fa-solid fa-code"></i>
-                    <span>No Coding Required</span>
+                    <i class="fa-solid fa-calendar-alt"></i>
+                    <span>Auto Scheduling</span>
                 </div>
             </div>
         </div>
@@ -81,33 +81,33 @@
     <section class="features">
         <div class="container">
             <div class="features-heading">
-                <i class="fa-solid fa-bolt-lightning"></i>
-                <h2>Key features</h2>
+                <i class="fa-solid fa-rocket"></i>
+                <h2>Revolutionary Features</h2>
             </div>
             <div class="features-list">
                 <div class="feature-item">
-                    <i class="fa-solid fa-spider feature-icon"></i>
-                    <span>Visual Web Scraping</span>
-                </div>
-                <div class="feature-item">
-                    <i class="fa-solid fa-table feature-icon"></i>
-                    <span>Data Entry</span>
-                </div>
-                <div class="feature-item">
-                    <i class="fa-solid fa-file-excel feature-icon"></i>
-                    <span>Spreadsheet Automation</span>
-                </div>
-                <div class="feature-item">
-                    <i class="fa-solid fa-robot feature-icon"></i>
-                    <span>Automate any website without code</span>
-                </div>
-                <div class="feature-item">
-                    <i class="fa-solid fa-plug feature-icon"></i>
-                    <span>Connect to Zapier, Integromat, Make, N8N or any Webhooks</span>
-                </div>
-                <div class="feature-item">
                     <i class="fa-solid fa-brain feature-icon"></i>
-                    <span>Connect to Openrouter Models for AI Automation and AI Content Generation</span>
+                    <span>AI Assistant with Browser Context Access</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fa-solid fa-calendar-check feature-icon"></i>
+                    <span>Automated Test Scheduling (Hourly, Daily, Weekly)</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fa-solid fa-spider feature-icon"></i>
+                    <span>Advanced Web Scraping & Structured Data Extraction</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fa-solid fa-camera feature-icon"></i>
+                    <span>Browser State Snapshots & Session Management</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fa-solid fa-file-export feature-icon"></i>
+                    <span>Smart Data Export to CSV, JSON & Real-time Processing</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fa-solid fa-code feature-icon"></i>
+                    <span>100+ Automation Commands + Multi-Language Code Export</span>
                 </div>
             </div>
         </div>
@@ -115,24 +115,24 @@
 
     <section class="use-cases">
         <div class="container">
-            <h2 class="section-title">Most browser tasks can be automated.<br>So we've built Selenix to help us work smarter.</h2>
-            <p class="section-subtitle">Scenarios and use cases where Selenix excels:</p>
+            <h2 class="section-title">Transform Hours of Manual Work<br>Into Minutes of Automated Intelligence</h2>
+            <p class="section-subtitle">Real results from Selenix users leveraging AI-powered automation:</p>
 
             <div class="use-case fade-in-element">
                 <div class="use-case-content">
-                    <span class="use-case-label">Use case</span>
-                    <h3>Data collection and analysis</h3>
-                    <p class="use-case-quote">"Saved 63 hours of manual work in the first month alone"</p>
+                    <span class="use-case-label">AI-Enhanced Data Collection</span>
+                    <h3>Intelligent Web Scraping & Analysis</h3>
+                    <p class="use-case-quote">"AI assistant made complex scraping incredibly simple"</p>
                 </div>
                 <div class="testimonial">
-                    <p>"This browser automation software is amazing!!! I set out to find a quick way to grab some information off of ADSY.com for my business. After I started using it, I found out just how powerful it can be.</p>
-                    <p>It is so customizable that it can really be used to do anything a human can do when looking up website information, I was able to quickly scrape pricing information and export it to CSV for further processing. It can even deploy ChatGPT to parse through scraped data.</p>
-                    <p>Over the course of my first month using Selenix.io, my automations have personally saved me over <span class="counter" data-target="3800">0</span> minutes (~63hrs) of browsing and collecting information, and a lot more than that if you take into consideration how efficiently it works with no distractions. It's like I hired a part time assistant for a fraction of the cost. Well done Selenix!"</p>
+                    <p>"Selenix's AI assistant completely changed how I approach web scraping. Instead of struggling with selectors and HTML structures, I just describe what data I need and the AI figures out how to extract it.</p>
+                    <p>The browser state snapshots are incredible - I can save my login sessions and complex page states, then restore them instantly across different scraping runs. The scheduling feature means my data collection runs automatically every morning.</p>
+                    <p>With the advanced data export features, I can scrape pricing information, transform it with AI processing, and have it automatically exported to CSV for my business analysis. Over the course of my first month, Selenix saved me over <span class="counter" data-target="3800">0</span> minutes (~63hrs) of manual data collection work."</p>
                     <div class="testimonial-author">
                         <img src="https://via.placeholder.com/50" alt="Alex Chen" class="author-avatar">
                         <div>
                             <p class="author-name">Alex Chen</p>
-                            <p class="author-title">Marketing Director</p>
+                            <p class="author-title">Business Intelligence Analyst</p>
                         </div>
                     </div>
                 </div>
@@ -140,20 +140,21 @@
 
             <div class="use-case fade-in-element">
                 <div class="testimonial">
-                    <p>"I don't know where to submit this but I know people love hearing how their tools are saving people time and money.</p>
-                    <p>I was spending over <span class="counter" data-target="20">0</span> hours a week manually filling out forms and retrieving data from multiple websites. With Selenix, I've automated these tasks completely. Now what used to take me an entire week takes just under 30 minutes to set up and run automatically!"</p>
+                    <p>"I was spending over <span class="counter" data-target="20">0</span> hours a week manually extracting data from multiple websites and filling out forms. Selenix's AI assistant helped me set up complex automations that I never could have created before.</p>
+                    <p>The structured data extraction feature is phenomenal - I can map multiple fields from complex web pages using simple JSON configurations. The AI even helps me optimize the selectors when sites change their structure!</p>
+                    <p>Now I schedule my automations to run overnight, and wake up to find all my data neatly organized in CSV files. What used to take me an entire week now runs automatically in under 30 minutes!"</p>
                     <div class="testimonial-author">
                         <img src="https://via.placeholder.com/50" alt="Sarah Johnson" class="author-avatar">
                         <div>
                             <p class="author-name">Sarah Johnson</p>
-                            <p class="author-title">Data Analyst</p>
+                            <p class="author-title">Market Research Specialist</p>
                         </div>
                     </div>
                 </div>
                 <div class="use-case-content">
-                    <span class="use-case-label">Use case</span>
-                    <h3>Data extraction with no coding</h3>
-                    <p class="use-case-quote">"Reduced 20+ hours of weekly manual tasks to 30 minutes"</p>
+                    <span class="use-case-label">Scheduled Automation</span>
+                    <h3>Set-and-Forget Data Extraction</h3>
+                    <p class="use-case-quote">"20+ hours of weekly work automated completely"</p>
                 </div>
             </div>
         </div>
@@ -161,28 +162,27 @@
 
     <section class="how-it-works">
         <div class="container">
-            <h2 class="section-title">How Selenix Works</h2>
+            <h2 class="section-title">How Selenix AI Works</h2>
             <div class="steps">
                 <div class="step fade-in-element active">
                     <div class="step-number">1</div>
                     <div class="step-content">
-                        <h3>Download the App</h3>
-                        <p>Download Selenix with just a single click. No complex setup required. Free.</p>
+                        <h3>Download & Connect AI</h3>
+                        <p>Download Selenix and optionally connect your AI API key for intelligent automation assistance. The AI can access your browser context, logs, and workspace.</p>
                     </div>
                 </div>
                 <div class="step fade-in-element active">
                     <div class="step-number">2</div>
                     <div class="step-content">
-                        <h3>Setup your Workflow (Either create your own, or download a pre-built template)</h3>
-                        <p>Browse our selection of pre-built templates for the most common automations. You can also create your own using our built in AI Assistant. No more 
-                            digging through comlex HTML for locators, the powerful AI assitant has access to the entire browser and work environment making everything easy.</p>
+                        <h3>Create with AI Assistance</h3>
+                        <p>Use our built-in AI assistant to create automations by describing what you want in plain English. The AI understands your browser, suggests optimal selectors, and helps debug issues in real-time.</p>
                     </div>
                 </div>
                 <div class="step fade-in-element active">
                     <div class="step-number">3</div>
                     <div class="step-content">
-                        <h3>Run Automatically</h3>
-                        <p>Execute your automation whenever you need it. Schedule it to run at specific times or trigger it based on events.</p>
+                        <h3>Schedule & Export</h3>
+                        <p>Schedule your automations to run automatically (hourly, daily, weekly). Export scraped data to CSV/JSON, create browser state snapshots, and let AI process your data intelligently.</p>
                     </div>
                 </div>
             </div>
@@ -191,37 +191,37 @@
 
     <section class="showcase">
         <div class="container">
-            <h2 class="section-title">Built for Everyone</h2>
-            <p class="section-subtitle">No coding experience required. If you can browse the web, you can automate with Selenix.</p>
+            <h2 class="section-title">Built for Modern Data Professionals</h2>
+            <p class="section-subtitle">Whether you're collecting data, automating workflows, or scaling operations—Selenix's AI makes it effortless.</p>
             
             <div class="showcase-grid">
                 <div class="showcase-item fade-in-element">
                     <div class="showcase-icon">
-                        <i class="fa-solid fa-briefcase"></i>
-                    </div>
-                    <h3>Business Owners</h3>
-                    <p>Automate repetitive tasks, data entry, and customer outreach to focus on growing your business.</p>
-                </div>
-                <div class="showcase-item fade-in-element">
-                    <div class="showcase-icon">
                         <i class="fa-solid fa-chart-line"></i>
                     </div>
-                    <h3>Marketers</h3>
-                    <p>Gather competitor insights, scrape valuable data, and automate campaign monitoring.</p>
+                    <h3>Data Scientists & Analysts</h3>
+                    <p>Scrape complex datasets with AI-assisted selectors. Schedule automatic data collection and export to your preferred formats for analysis.</p>
                 </div>
                 <div class="showcase-item fade-in-element">
                     <div class="showcase-icon">
-                        <i class="fa-solid fa-database"></i>
+                        <i class="fa-solid fa-briefcase"></i>
                     </div>
-                    <h3>Data Analysts</h3>
-                    <p>Extract web data without writing complex code. Export directly to spreadsheets.</p>
+                    <h3>Business Intelligence Teams</h3>
+                    <p>Automate competitor monitoring, price tracking, and market research. Create snapshots of critical business data with scheduled exports.</p>
                 </div>
                 <div class="showcase-item fade-in-element">
                     <div class="showcase-icon">
-                        <i class="fa-solid fa-users"></i>
+                        <i class="fa-solid fa-robot"></i>
                     </div>
-                    <h3>HR Teams</h3>
-                    <p>Streamline candidate research, job posting, and applicant tracking across multiple platforms.</p>
+                    <h3>Automation Engineers</h3>
+                    <p>Build sophisticated workflows with 100+ commands, AI assistance, and multi-language code export. Perfect for scaling operations.</p>
+                </div>
+                <div class="showcase-item fade-in-element">
+                    <div class="showcase-icon">
+                        <i class="fa-solid fa-globe"></i>
+                    </div>
+                    <h3>Digital Marketers</h3>
+                    <p>Gather competitor insights, monitor campaigns, and extract marketing data automatically. AI helps optimize your data collection strategies.</p>
                 </div>
             </div>
         </div>
@@ -230,15 +230,15 @@
     <section class="cta" id="download">
         <div class="container">
             <div class="cta-content fade-in-element">
-                <h2>Automate with selenix.io in minutes</h2>
-                <p>No credit card required • One year free license • Email registration required</p>
+                <h2>Start Automating with AI in Minutes</h2>
+                <p>No credit card required • One year free license • AI assistant included</p>
                 <a href="download.php" class="secondary-button">
                     <i class="fa-solid fa-download"></i>
                     Download Selenix + License
                 </a>
                 <p class="license-info" style="margin-top: 15px; font-size: 14px; color: #666;">
-                    <i class="fa-solid fa-shield-alt"></i>
-                    Your download includes a secure 1-year license key
+                    <i class="fa-solid fa-brain"></i>
+                    Your download includes AI assistant access and a secure 1-year license key
                 </p>
             </div>
         </div>
