--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         "description": "AI-powered browser automation and web scraping tool that requires zero coding. Automate data extraction, form filling, and complex workflows with intelligent assistance.",
         "url": "https://selenix.io",
         "applicationCategory": "DeveloperApplication",
-        "operatingSystem": "Windows",
+        "operatingSystem": "Windows,mac,linux",
         "offers": {
             "@type": "Offer",
             "price": "0",
